--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@strapi/plugin-users-permissions": "4.25.8",
     "@strapi/strapi": "^4.25.8",
     "@strapi/utils": "^4.25.8",
+    "better-sqlite3": "^11.2.1",
     "dotenv": "^16.4.5",
     "esbuild": "^0.23.1",
     "mysql": "2.18.1",
